Bug 18663 - [4.0 Regression] ACATS ICE cc1221d expected integer_cst, have nop_expr in tree_int_cst_lt, at tree.c:3779
Summary: [4.0 Regression] ACATS ICE cc1221d expected integer_cst, have nop_expr in tre...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.0.0
: P2 normal
Target Milestone: 4.0.0
Assignee: Eric Botcazou
URL:
Keywords: ice-on-valid-code, patch
: 18705 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-11-24 21:59 UTC by Laurent GUERBY
Modified: 2005-02-22 13:52 UTC (History)
4 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-02-15 06:34:24


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent GUERBY 2004-11-24 21:59:10 UTC
Present on both x86 and x86_64.

+===========================GNAT BUG DETECTED==============================+
| 4.0.0 20041122 (experimental) (i686-pc-linux-gnu) GCC error:             |
| tree check: expected integer_cst, have nop_expr in tree_int_cst_lt,      |
|    at tree.c:3779                                                        |
| Error detected at cc1221d.adb:173:5                                      |
Comment 1 Andrew Pinski 2004-11-24 22:01:24 UTC
Confirmed also on ppc-darwin.
Comment 2 Laurent GUERBY 2004-12-05 16:37:19 UTC
Also happens on ia64-linux.
Comment 3 Laurent GUERBY 2004-12-06 20:10:49 UTC
The test PASS at -O0 on x86, x86_64 and ia64.
Comment 4 Eric Botcazou 2005-02-20 15:38:14 UTC
Investigating.
Comment 5 Eric Botcazou 2005-02-20 21:57:59 UTC
Recategorizing.
Comment 6 Eric Botcazou 2005-02-20 22:09:55 UTC
Proposed fix: http://gcc.gnu.org/ml/gcc-patches/2005-02/msg01179.html
Comment 7 Andrew Pinski 2005-02-20 22:21:43 UTC
I want to say PR 18705 is the bug as this one but I could be wrong.
Comment 8 Eric Botcazou 2005-02-20 22:26:49 UTC
> I want to say PR 18705 is the bug as this one but I could be wrong.

I think you're right.
Comment 9 GCC Commits 2005-02-21 07:27:27 UTC
Subject: Bug 18663

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	ebotcazou@gcc.gnu.org	2005-02-21 07:27:16

Modified files:
	gcc            : ChangeLog tree-ssa-dom.c 

Log message:
	PR tree-optimization/18663
	* tree-ssa-dom.c (extract_range_from_cond): Return 0
	if the type has variable bounds.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.7545&r2=2.7546
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/tree-ssa-dom.c.diff?cvsroot=gcc&r1=2.92&r2=2.93

Comment 10 Eric Botcazou 2005-02-21 07:29:50 UTC
Patch applied.
Comment 11 Andrew Pinski 2005-02-22 13:52:08 UTC
*** Bug 18705 has been marked as a duplicate of this bug. ***